--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -22,6 +22,7 @@
     <ClCompile Include="Source\Physics.cpp" />
     <ClCompile Include="Source\Enemy.cpp" />
     <ClCompile Include="Source\Enemy2.cpp" />
+    <ClCompile Include="Source\Pathfinding.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Window.h" />
@@ -68,6 +69,7 @@
     <ClInclude Include="Source\Animation.h" />
     <ClInclude Include="Source\Enemy.h" />
     <ClInclude Include="Source\Enemy2.h" />
+    <ClInclude Include="Source\Pathfinding.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
